# Eluna

./: .gitignore  .gitmodules  AuraMethods.h  BattleGroundHooks.cpp  BattleGroundMethods.h  BindingMap.h  CMakeLists.txt  CorpseMethods.h  CreatureHooks.cpp  CreatureMethods.h  ElunaBinding.h  ElunaCompat.cpp  ElunaCompat.h  ElunaConfig.cpp  ElunaConfig.h  ElunaCreatureAI.h  ElunaEventMgr.cpp  ElunaEventMgr.h  ElunaIncludes.h  ElunaInstanceAI.cpp  ElunaInstanceAI.h  ElunaInstanceData.h  ElunaLoader.cpp  ElunaLoader.h  ElunaMethods.cpp  ElunaMgr.cpp  ElunaMgr.h  ElunaProcInfo.cpp  ElunaProcInfo.h  ElunaQueryMethods.h  ElunaSpellWrapper.cpp  ElunaSpellWrapper.h  ElunaStateCommunication.cpp  ElunaStateCommunication.h  ElunaTemplate.cpp  ElunaTemplate.h  ElunaUtilitiy.cpp  ElunaUtilitiy.h  ElunaUtility.cpp  ElunaUtility.h  (+48 more)
.github/workflows/: build-lua51.yml  build-lua52.yml  build-lua53.yml  build-lua54.yml  build-luajit.yml  build.yml  build_tc.yml  core-build-base.yml  core_build.yml  create-pr.sh  documentation.yml  pr-on-label.yml
CMaNGOS/Classic/: CMakeLists.txt  README
CMangos/: AuraMethods.h  BattleGroundMethods.h  CorpseMethods.h  CreatureMethods.h  ElunaQueryMethods.h  GameObjectMethods.h  GlobalMethods.h  GroupMethods.h  GuildMethods.h  ItemMethods.h  MapMethods.h  ObjectMethods.h  PlayerMethods.h  QuestMethods.h  SpellMethods.h  UnitMethods.h  VehicleMethods.h  WorldObjectMethods.h  WorldPacketMethods.h
Eluna/: README.md
MaNGOS/WotLK/: CMakeLists.txt  README
MaNGOS/WotLK/src/LuaEngine/: AuraMethods.cpp  AuraMethods.h  CMakeLists.txt  CorpseMethods.h  GameObjectMethods.cpp  GameObjectMethods.h  GlobalMethods.h  GroupMethods.h  GuildMethods.h  HookMgr.cpp  HookMgr.h  Includes.h  ItemMethods.h  LuaEngine.h  LuaFunctions.cpp  MapMethods.h  QueryMethods.h  QuestMethods.h  SpellMethods.h  UnitMethods.cpp  UnitMethods.h  WorldPacketMethods.h
Mangos/: AuraMethods.h  BattleGroundMethods.h  CorpseMethods.h  CreatureMethods.h  ElunaQueryMethods.h  GameObjectMethods.h  GlobalMethods.h  GroupMethods.h  GuildMethods.h  ItemMethods.h  MapMethods.h  ObjectMethods.h  PlayerMethods.h  QuestMethods.h  SpellMethods.h  UnitMethods.h  VehicleMethods.h  WorldObjectMethods.h  WorldPacketMethods.h
TrinityCore/: AuraMethods.h  BattleGroundMethods.h  CorpseMethods.h  CreatureMethods.h  ElunaQueryMethods.h  GameObjectMethods.h  GlobalMethods.h  GroupMethods.h  GuildMethods.h  ItemMethods.h  LootMethods.h  MapMethods.h  ObjectMethods.h  PlayerMethods.h  QuestMethods.h  SpellInfoMethods.h  SpellMethods.h  UnitMethods.h  VehicleMethods.h  WorldObjectMethods.h  WorldPacketMethods.h
TrinityCore/Cataclysm/: README
TrinityCore/WotLK/: README
VMangos/: AuraMethods.h  BattleGroundMethods.h  CorpseMethods.h  CreatureMethods.h  ElunaQueryMethods.h  GameObjectMethods.h  GlobalMethods.h  GroupMethods.h  GuildMethods.h  ItemMethods.h  MapMethods.h  ObjectMethods.h  PlayerMethods.h  QuestMethods.h  SpellMethods.h  UnitMethods.h  VehicleMethods.h  WorldObjectMethods.h  WorldPacketMethods.h
cmake/: after_gs_install.cmake  after_load_cmake_modules.cmake  after_load_conf.cmake  after_ws_install.cmake  before_script_install.cmake
conf/: mod_eluna.conf.dist
docs/: CONTRIBUTING.md  DOC_GEN.md  IMPL_DETAILS.md  INSTALL.md  LICENSE.txt  MERGING.md
docs/ElunaDoc/: __main__.py  parser.py
extensions/: FunctionCache.ext  FunctionCache.ext.lua  FunctionCache.lua  Misc.lua  ObjectVariables.ext  ObjectVariables.ext.lua  ObjectVariables.lua  Randomize.lua  _Misc.ext  _Misc.ext.lua  _Misc.lua  package_path.ext
extensions/StackTracePlus/: StackTracePlus.ext
hooks/: BattleGroundHooks.cpp  CreatureHooks.cpp  GameObjectHooks.cpp  GossipHooks.cpp  GroupHooks.cpp  GuildHooks.cpp  HookHelpers.h  Hooks.h  InstanceHooks.cpp  ItemHooks.cpp  PacketHooks.cpp  PlayerHooks.cpp  ServerHooks.cpp  SpellHooks.cpp  VehicleHooks.cpp
lualib/: CMakeLists.txt
methods/: CustomMethodsInterface.h  Methods.cpp  README.md
methods/AzerothCore/: AuraEffectMethods.h  BattleGroundMethods.h  CorpseMethods.h  CreatureMethods.h  ElunaQueryMethods.h  GameObjectMethods.h  GlobalMethods.h  GroupMethods.h  GuildMethods.h  ItemMethods.h  MapMethods.h  PlayerMethods.h  QuestMethods.h  SpellInfoMethods.h  UnitMethods.h  VehicleMethods.h  WorldObjectMethods.h
methods/CMangos/: AuraMethods.h  BattleGroundMethods.h  BigIntMethods.h  CorpseMethods.h  CreatureMethods.h  ElunaQueryMethods.h  GameObjectMethods.h  GlobalMethods.h  GroupMethods.h  GuildMethods.h  ItemMethods.h  MapMethods.h  ObjectMethods.h  PlayerMethods.h  QuestMethods.h  SpellMethods.h  UnitMethods.h  VehicleMethods.h  WorldObjectMethods.h  WorldPacketMethods.h
methods/Mangos/: AuraMethods.h  BattleGroundMethods.h  CorpseMethods.h  CreatureMethods.h  CustomMethods.h  ElunaQueryMethods.h  GameObjectMethods.h  GlobalMethods.h  GroupMethods.h  GuildMethods.h  ItemMethods.h  MapMethods.h  PlayerMethods.h  QuestMethods.h  SpellMethods.h  UnitMethods.h  VehicleMethods.h  WorldObjectMethods.h  WorldPacketMethods.h
methods/TrinityCore/: AuraEffectMethods.h  AuraMethods.h  BattleGroundMethods.h  BigIntMethods.h  CorpseMethods.h  CreatureMethods.h  CustomMethods.h  ElunaProcInfoMethods.h  ElunaQueryMethods.h  GameObjectMethods.h  GlobalMethods.h  GroupMethods.h  GuildMethods.h  ItemMethods.h  LootMethods.h  MapMethods.h  ObjectMethods.h  PlayerMethods.h  QuestMethods.h  SpellInfoMethods.h  SpellMethods.h  UnitMethods.h  VehicleMethods.h  WorldObjectMethods.h  WorldPacketMethods.h
methods/VMangos/: AuraMethods.h  BattleGroundMethods.h  BigIntMethods.h  CreatureMethods.h  CustomMethods.h  ElunaQueryMethods.h  GameObjectMethods.h  GlobalMethods.h  GroupMethods.h  GuildMethods.h  ItemMethods.h  MapMethods.h  ObjectMethods.h  PlayerMethods.h  QuestMethods.h  SpellMethods.h  UnitMethods.h  VehicleMethods.h  WorldObjectMethods.h  WorldPacketMethods.h
modules/: readme.md
modules/example_module/: example_module.c  test_example_module.lua
src/: ElunaLuaEngine_SC.cpp  eluna_lua_engine_loader.cpp
src/LuaEngine/: AchievementMethods.h  CorpseMethods.h  CreatureMethods.h  ElunaIncludes.h  (+17 more)
(+126 files in other folders)
